Fix bug in scrollbars for epiphany (regression introduced by commit 7928d0f)

--- a/Zen-papero/gtk-3.0/gtk-widgets.css
+++ b/Zen-papero/gtk-3.0/gtk-widgets.css
@@ -263,6 +263,7 @@ GtkAssistant .sidebar {
 
 GtkSwitch.slider,
 .button {
+    color: @fg_color;
     background-image: -gtk-gradient(linear, left top, left bottom,
                                      from (shade(@button_bg_normal, 1.05)),
                                      to (shade(@button_bg_normal, 0.95)));
@@ -481,6 +482,7 @@ GtkScale.vertical.trough {
 
 .scrollbar.button, .scrollbar.trough {
     border-style: none;
+    background-color: @bg_color;
     background-image: none;
 }
 
